--- a/Desktop.ImportTool/App.xaml
+++ b/Desktop.ImportTool/App.xaml
@@ -2,8 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:telerik="http://schemas.telerik.com/2008/xaml/presentation"
-             xmlns:local="clr-namespace:Desktop.ImportTool"
-             StartupUri="Views\MainWindow.xaml">
+             xmlns:local="clr-namespace:Desktop.ImportTool">
     <Application.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
